--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "fxp/composer-asset-plugin": "^1.3",
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
@@ -39,6 +38,9 @@
         }
     },
     "scripts": {
+        "pre-create-project-cmd": [
+            "composer global require \"fxp/composer-asset-plugin:^1.3.1\""
+        ],
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject"
         ],
