--- a/composer.json
+++ b/composer.json
@@ -38,19 +38,25 @@
         }
     },
     "scripts": {
-        "pre-create-project-cmd": [
+        "pre-install-cmd": [
             "composer global require \"fxp/composer-asset-plugin:^1.3.1\""
         ],
         "post-create-project-cmd": [
             "yii\\composer\\Installer::postCreateProject"
-        ],
-        "post-install-cmd": [
-            "chmod 777 public/assets",
-            "chmod 777 protected/runtime"
-        ],
-        "post-update-cmd": [
-            "chmod 777 public/assets",
-            "chmod 777 protected/runtime"
         ]
+    },
+    "extra": {
+        "yii\\composer\\Installer::postCreateProject": {
+            "setPermission": [
+                {
+                    "protected/runtime": "0777",
+                    "public/assets": "0777",
+                    "protected/yii": "0755"
+                }
+            ],
+            "generateCookieValidationKey": [
+                "protected/config/web.php"
+            ]
+        }
     }
 }
