--- a/protected/.env
+++ b/protected/.env
@@ -4,8 +4,13 @@ ROOT_PATH="/"
 APP_ID="yii2-core"
 APP_NAME="Yii2 Core Framework"
 APP_TIMEZONE="Asia/Bangkok"
-APP_LANGUAGE="en-US"
+APP_LANGUAGE="en-EN"
 APP_CHAR="UTF-8"
+
+DB_DSN="mysql:host=127.0.0.1;dbname=yii2db"
+DB_USER=root
+DB_PASS=
+DB_CHAR=utf8
 
 SMTP_HOST=
 SMTP_USER=
